Closed Bug 356901 Opened 19 years ago Closed 18 years ago

Error message, plus warnings, for valid "offset" attribute on <stop>

Categories

(Core :: SVG, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: longsonr)

References

()

Details

Attachments

(2 files, 1 obsolete file)

See testcase in URL field. I might end up fixing this in bug 314286...
Attached patch patch (obsolete) — Splinter Review
Assignee: general → longsonr
Status: NEW → ASSIGNED
Attachment #255342 - Flags: review?(tor)
Attachment #255342 - Flags: review?(tor) → review+
Attachment #255342 - Flags: superreview?(bzbarsky)
Comment on attachment 255342 [details] [diff] [review] patch I guess, sure. Kinda hard to tell what's going on with all the reindenting...
Attachment #255342 - Flags: superreview?(bzbarsky) → superreview+
Comment on attachment 255362 [details] [diff] [review] with -w in case anyone's interested >+ if (nsSVGElement::ParseAttribute(aNamespaceID, aAttribute, aValue, aResult)) >+ return PR_TRUE; >+ > return PR_FALSE; Oh, I did have a comment on that. Why not just: return nsSVGElement::ParseAttribute(aNamespaceID, aAttribute, aValue, aResult); ?
Attachment #255342 - Attachment is obsolete: true
Comment on attachment 255366 [details] [diff] [review] update as per sr comment checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: