Bug 356901 - offset attribute not parsed correctly. r=tor,sr=bzbarsky